force-app/main/default/objects/HP_EC_Amazone_Pay_Setting__mdt/HP_EC_Amazone_Pay_Setting__mdt.object-meta.xml
<CustomObject>
    <label>HP EC Amazone Pay Setting</label>
    <pluralLabel>HP EC Amazone Pay Settings</pluralLabel>
</CustomObject>