force-app/main/default/objects/HP_EC_Amazone_Pay_Setting__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>