force-app/main/default/objects/HP_EC_Amazone_Pay_Setting__mdt/fields/Merchant_Domain__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Domain__c</fullName>
    <label>Merchant Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>