force-app/main/default/objects/HP_EC_Amazone_Pay_Setting__mdt/fields/Origin_Url__c.field-meta.xml
<CustomField>
    <fullName>Origin_Url__c</fullName>
    <label>Origin Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>