force-app/main/default/objects/HP_EC_Amazone_Pay_Setting__mdt/fields/Public_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Public_Key_Id__c</fullName>
    <label>Public Key Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>