force-app/main/default/objects/HP_EC_Amazone_Pay_Setting__mdt/fields/Return_URL__c.field-meta.xml
<CustomField>
    <fullName>Return_URL__c</fullName>
    <label>Return URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>