force-app/main/default/objects/HP_EC_Amazone_Pay_Setting__mdt/fields/Security_Key__c.field-meta.xml
<CustomField>
    <fullName>Security_Key__c</fullName>
    <label>Security Key</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>