force-app/main/default/objects/HP_EC_Amazone_Pay_Setting__mdt/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>